# coreDAQ_API

./: README.md  README_JS_API.md  Typical InGaAs PD Responsivity.xlsx  Typical Si PD Responsivity (1).xls  build_programmers_manual_pdf.py  build_responsivity_json.py  coredaq_js_api.js  coredaq_python_api.py  enter_dfu.py  package.json  plot_responsivity_compare.py  responsivity_curves.json  santec_ftdi_helper.py  serial_console.py  sweep_h5_writer.py
CPP_API/: CMakeLists.txt  README.md
CPP_API/examples/: example_snapshot_w.cpp  example_transfer_w.cpp
CPP_API/include/: coredaq_cpp_api.hpp
CPP_API/src/: coredaq_cpp_api.cpp
C_API/: CMakeLists.txt  README.md
C_API/examples/: example_snapshot_w.c  example_triggered_capture.c
C_API/include/: coredaq_c_api.h
C_API/src/: coredaq_c_api.c
JavaScript/: coredaq_js_api.js  responsivity_curves.json
JavaScript/examples/: example_linear_gain_read.js  example_transfer_w_timed.js  example_triggered_acquisition.js
Python/: coredaq_python_api.py
Python/examples/: example_linear_gain_read.py  example_triggered_acquisition.py
Python_Examples/: README.md  _example_common.py  example_live_stream_plot.py  example_set_gain_measure.py  example_timer_acquisition_plot.py  example_trigger_acquisition_plot.py
examples/: README.md  example_plot_saved_sweep.py  example_plot_saved_sweep_h5.py  example_plot_saved_sweep_minimal.py
examples_js/: example_discover_snapshot.js  example_transfer_w_timed.js
